paginate builds API + web endpoint
* clean up pagination UI
* kill Debug endpoint

[#109979272]

Signed-off-by: Robert Neumann <rneumann@pivotal.io>

--- a/web/assets/css/main.less
+++ b/web/assets/css/main.less
@@ -16,3 +16,8 @@
 @import "pipeline_nav.less";
 
 @import "login.less";
+
+@import "pagination.less";
+
+@import "resource.less";
+@import "job.less";
