switch to solarized colors

--- a/web/assets/css/_vars.less
+++ b/web/assets/css/_vars.less
@@ -6,11 +6,11 @@
 @base05: #d0d0d0;
 @base06: #e0e0e0;
 @base07: #f5f5f5;
-@base08: #ac4142;
-@base09: #d28445;
-@base0A: #f4bf75;
-@base0B: #90a959;
-@base0C: #75b5aa;
-@base0D: #6a9fb5;
-@base0E: #aa759f;
-@base0F: #8f5536;
+@base08: #dc322f;
+@base09: #cb4b16;
+@base0A: #b58900;
+@base0B: #859900;
+@base0C: #2aa198;
+@base0D: #268bd2;
+@base0E: #6c71c4;
+@base0F: #d33682;
