--- a/web/templates/builds/show.html
+++ b/web/templates/builds/show.html
@@ -5,7 +5,7 @@
 
 <script src="{{asset "jquery-2.1.1.min.js"}}"></script>
 <script src="{{asset "concourse.js"}}"></script>
-<script src="{{asset "elm.min.js"}}"></script>
+<script src="{{asset "elm.js"}}"></script>
 <script type="text/javascript">
 Elm.embed(Elm.Main, document.getElementById("elm-app"), {buildId: {{.Build.ID}}});
 </script>
