Elmify Job page
- Make build duration live update
- Remove "pending: 46 years ago"

[#109657184]

Signed-off-by: Robert Neumann <rneumann@pivotal.io>

--- a/web/assets/css/colors.less
+++ b/web/assets/css/colors.less
@@ -54,9 +54,9 @@ span.error { color: @base08; }
 
 #page-header.failed { background: @base08; }
 
-.build-step .header .version { color: @base06; }
+.build-step .header .dictionary { color: @base06; }
 
-.build-header .build-times { color: @base07; }
+.build-header .build-duration { color: @base07; }
 .resource-header h1 { color: @base07; }
 
 .builds-list li a { color: @base07; }
