--- a/web/templates/job.html
+++ b/web/templates/job.html
@@ -1,127 +1,12 @@
 {{define "title"}}{{.Job.Name}} - Concourse{{end}}
 
 {{define "body"}}
-<div class="js-job" data-endpoint="pipelines/{{.PipelineName}}/jobs/{{.Job.Name}}">
-  <div id="page-header" class="{{if .CurrentBuild}}{{.CurrentBuild.Status}}{{else}}no-builds{{end}}">
-    <div class="build-header">
-      {{if .Job.Paused}}
-        <span class="btn-pause btn-large fl enabled js-pauseUnpause"><i class="fa fa-fw fa-play"></i></span>
-      {{else}}
-        <span class="btn-pause btn-large fl disabled js-pauseUnpause"><i class="fa fa-fw fa-pause"></i></span>
-      {{end}}
-      <form class="trigger-build" method="post" action="{{url "TriggerBuild" .PipelineName .Job}}">
-        <button class="build-action fr"><i class="fa fa-plus-circle"></i></button>
-      </form>
-
-      <h1>{{.Job.Name}}</h1>
-    </div>
-  </div>
-
-  <div id="job-body">
-    <div class="pagination-header">
-      <div class="pagination fr">
-        {{if .Pagination.Previous}}
-        <div class="btn-page-link">
-          <a class="arrow" href="{{url "GetJob" .PipelineName .Job .Pagination.Previous}}"><i class="fa fa-arrow-left"></i></a>
-        </div>
-        {{else}}
-        <div class="btn-page-link disabled">
-          <span class="arrow"><i class="fa fa-arrow-left"></i></span>
-        </div>
-        {{end}}
-        {{if .Pagination.Next}}
-        <div class="btn-page-link">
-          <a class="arrow" href="{{url "GetJob" .PipelineName .Job .Pagination.Next}}"><i class="fa fa-arrow-right"></i></a>
-        </div>
-        {{else}}
-        <div class="btn-page-link disabled">
-          <span class="arrow"><i class="fa fa-arrow-right"></i></span>
-        </div>
-        {{end}}
-      </div>
-
-      <h1>builds</h1>
-    </div>
-
-    <ul class="jobs-builds-list builds-list">
-      {{$job := .Job}}
-      {{range .Builds}}
-      <li class="js-build" data-status="{{.Build.Status}}">
-        <a class="{{.Build.Status}}" href="{{url "GetBuild" $job .Build}}">&#35;{{.Build.Name}}</a>
-
-        <div class="pam clearfix">
-          <div class="js-build-times build-times mbm" data-start-time="{{.Build.StartTime}}" data-end-time={{.Build.EndTime}}></div>
-
-          <div class="inputs mrl" >
-            <div class="resource-title pbs"><i class="fa fa-fw fa-arrow-down prs"></i>inputs </div>
-            <div class="build-resources">
-              {{range .Resources.Inputs}}
-                <div class="mbs pas resource fl clearfix">
-                  <div class="resource-name mrm">
-                    {{.Resource}}
-                  </div>
-                  <div class="resource-version">
-                    {{range $name, $val := .Version}}
-                    {{$name}}: {{$val}}
-                    {{end}}
-                  </div>
-                </div>
-              {{end}}
-            </div>
-          </div>
-
-          <div class="outputs mrl">
-            <div class="resource-title pbs"><i class="fa fa-fw fa-arrow-up prs"></i>outputs</div>
-            <div class="build-resources">
-              {{range .Resources.Outputs}}
-                <div class="mbs pas resource fl clearfix">
-                  <div class="resource-name mrm">
-                    {{.Resource}}
-                  </div>
-                  <div class="resource-version">
-                    {{range $name, $val := .Version}}
-                    {{$name}}: {{$val}}
-                    {{end}}
-                  </div>
-                </div>
-              {{end}}
-            </div>
-          </div>
-        </div>
-      </li>
-      {{end}}
-    </ul>
-
-    <div class="pagination-footer">
-      <div class="pagination fr">
-        {{if .Pagination.Previous}}
-        <div class="btn-page-link">
-          <a class="arrow" href="{{url "GetJob" .PipelineName .Job .Pagination.Previous}}"><i class="fa fa-arrow-left"></i></a>
-        </div>
-        {{else}}
-        <div class="btn-page-link disabled">
-          <span class="arrow"><i class="fa fa-arrow-left"></i></span>
-        </div>
-        {{end}}
-        {{if .Pagination.Next}}
-        <div class="btn-page-link">
-          <a class="arrow" href="{{url "GetJob" .PipelineName .Job .Pagination.Next}}"><i class="fa fa-arrow-right"></i></a>
-        </div>
-        {{else}}
-        <div class="btn-page-link disabled">
-          <span class="arrow"><i class="fa fa-arrow-right"></i></span>
-        </div>
-        {{end}}
-      </div>
-    </div>
-  </div>
-</div>
+<div id="elm-app"></div>
 
 <script src="{{asset "jquery-2.1.1.min.js"}}"></script>
-<script src="{{asset "moment.min.js"}}"></script>
-<script src="{{asset "moment-duration-format.js"}}"></script>
 <script src="{{asset "concourse.js"}}"></script>
-<script>
-concourse.pipelineName = {{.PipelineName}};
+<script src="{{asset "elm.min.js"}}"></script>
+<script type="text/javascript">
+Elm.embed(Elm.JobPage, document.getElementById("elm-app"), {jobName: {{.Job.Name}}, pipelineName: {{.PipelineName}}, pageSince: {{.Since}}, pageUntil: {{.Until}}});
 </script>
 {{end}}
