--- a/web/assets/css/legacy.less
+++ b/web/assets/css/legacy.less
@@ -18,26 +18,10 @@
   margin-left: 18px;
 }
 
-.build-header .build-times {
-  height: 48px;
+.build-header .build-duration {
   float: left;
-  padding: 6px;
-  margin: 0;
+  margin: 6px 0px 6px 24px;
 }
-
-.build-header .build-times dt {
-  width: 8em;
-  display: inline-block;
-  float: left;
-  text-align: right;
-}
-
-.build-header .build-times dd {
-  margin-left: 9em;
-  white-space: pre;
-  word-wrap: break-word;
-}
-
 
 .build-action {
   background: transparent;
@@ -189,12 +173,12 @@ span.error {
   margin-bottom: 0;
 }
 
-.build-step.inactive h3, .build-step.inactive i, .build-step.inactive .version {
+.build-step.inactive h3, .build-step.inactive i, .build-step.inactive .dictionary {
   color: @base03;
 }
 
 .build-step.inactive.first-occurrence {
-  h3, i, .version {
+  h3, i, .dictionary {
     color: @base04;
   }
 }
@@ -226,11 +210,14 @@ span.error {
   float: right;
 }
 
-.build-step .header .version {
-  float: right;
-  margin: 0;
-  padding: 0 6px;
+.build-step .header .dict-key,
+.build-step .header .dict-value {
   line-height: 28px;
+  padding: 0 6px;
+}
+
+.build-step .dictionary {
+  float: right;
 }
 
 .build-step .header h3 {
@@ -240,19 +227,15 @@ span.error {
   line-height: 28px;
 }
 
-.build-step dt,
-.build-metadata dt {
-  width: 10em;
-  display: inline-block;
-  float: left;
+.dict-key {
   text-align: right;
+  padding: 0px 10px 0px 0px;
+  margin: 0px;
 }
 
-.build-step dd,
-.build-metadata dd {
-  margin-left: 11em;
-  white-space: pre;
-  word-wrap: break-word;
+.dict-value {
+  padding: 0px;
+  margin: 0px;
 }
 
 .resource-check-status .header {
