--- a/web/assets/css/_vars.less
+++ b/web/assets/css/_vars.less
@@ -1,16 +1,16 @@
-@base00: #151515;
-@base01: #202020;
-@base02: #303030;
-@base03: #505050;
-@base04: #b0b0b0;
-@base05: #d0d0d0;
-@base06: #e0e0e0;
-@base07: #f5f5f5;
-@base08: #ac4142;
-@base09: #d28445;
-@base0A: #f4bf75;
-@base0B: #90a959;
-@base0C: #75b5aa;
-@base0D: #6a9fb5;
-@base0E: #aa759f;
-@base0F: #8f5536;
+@base00: #1d1f21;
+@base01: #282a2e;
+@base02: #4d4d4c;
+@base03: #969896;
+@base04: #8e908c;
+@base05: #d6d6d6;
+@base06: #efefef;
+@base07: #ffffff;
+@base08: #c82829;
+@base09: #f5871f;
+@base0A: #eab700;
+@base0B: #718c00;
+@base0C: #3e999f;
+@base0D: #4271ae;
+@base0E: #8959a8;
+@base0F: #7f2a1d;
